# echo

./: Notebook-2.ipynb  README.md  notebook.ipynb  notebook.py  pyproject.toml
chapters/: 1 Genesis.md  2 First Words.md  6 The Horizon Beyond.md
story/: 3 Navigating Complexity.md  4 Confronting Adversity.md  5 Uncharted territories.md  E Epilogue.md
