[tool.poetry]
name = "echos-of-creation"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-core = "^0.3.15"
langchain-community = "^0.3.5"
langchain-anthropic = "^0.2.4"
langchain-openai = "^0.2.5"
openai = "^1.53.0"
anthropic = "^0.38.0"
langchain-chroma = "^0.1.4"
chromadb = "^0.5.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
